tests/baselines/reference/parserExportAssignment6.errors.txt
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment6.ts(2,14): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment6.ts (1 errors) ====
    declare module "M" {
        export = A;
                 ~
!!! error TS2304: Cannot find name 'A'.
    }